# GNR638-Machine-Learning-for-Remote-Sensing-2

./: README.md
Assignment 1/: .gitignore  CMakeLists.txt  Makefile  README.md  requirements.txt  setup.py
Assignment 1/configs/: cifar100.yaml  mnist.yaml
Assignment 1/deepnet/bindings/: bindings.cpp
Assignment 1/deepnet/cpp/include/: loss.hpp  tensor.hpp
Assignment 1/deepnet/cpp/include/cuda/: cuda_ops.hpp  cuda_utils.hpp
Assignment 1/deepnet/cpp/include/layers/: batchnorm.hpp  layer.hpp  pooling.hpp
Assignment 1/deepnet/cpp/include/optimizers/: optimizer.hpp  scheduler.hpp
Assignment 1/deepnet/cpp/src/: loss.cpp  tensor.cpp
Assignment 1/deepnet/cpp/src/cuda/: cuda_kernels.cu
Assignment 1/deepnet/cpp/src/layers/: batchnorm.cpp  layer.cpp  pooling.cpp
Assignment 1/deepnet/cpp/src/optimizers/: optimizer.cpp
Assignment 1/deepnet/python/: __init__.py  data.py  models.py  module.py  utils.py
Assignment 1/report/: generate_plots.py  report.aux  report.out  report.tex
Assignment 1/scripts/: debug_metrics.py  evaluate.py  train.py
Assignment 1/scripts/tests/: test_all_layers.py  test_cuda.py  test_cuda_ops.py  test_determinism.py  test_device_ops.py  test_gpu_integrity.py  test_gradient.py
Assignment 1/utils/: __init__.py  metrics.py  plot_logs.py
